--- a/css/index.css
+++ b/css/index.css
@@ -11,27 +11,40 @@
     font-family: "Poppins", sans-serif;
 }
 
+
+
+
+
+
+
+
+/* Apartado del navbar superior */
+
 /* 
  * Estilos para la barra de navegación.
  * Se fija en la parte superior, ocupa el 100% del ancho y tiene un fondo semitransparente.
  * Se usa un índice z alto para que esté por encima de otros elementos.
  */
  .navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.9); /* Fondo oscuro semi-transparente */
+    z-index: 1000; /* Asegura que siempre está por encima */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px;
-    background-color: #222;
+    padding: 10px 20px;
+    transition: top 0.3s ease-in-out;
 }
 
-/* 
- * Lista de navegación: sin viñetas, alineación central y separación entre elementos.
- */
+/* Asegura que la lista de navegación se mantenga centrada */
 .navbar ul {
     list-style: none;
     display: flex;
     justify-content: center;
     gap: 25px;
+    flex-grow: 1;
 }
 
 /* 
@@ -67,6 +80,87 @@
         display: none;
     }
 }
+
+/* Fin del apartado del navbar superior */
+
+
+
+
+
+
+
+
+
+
+
+/* Apartado del Switch para cambiar de idioma */
+
+.switch {
+    position: relative;
+    width: 40px;
+    height: 20px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 24px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #0073b1;
+}
+
+input:checked + .slider:before {
+    transform: translateX(20px);
+    background-color: #fff;
+}
+
+.lang-text {
+    color: white;
+    font-weight: bold;
+}
+
+.language-switch {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Espaciado entre elementos */
+}
+
+/* Fin del apartado del Switch para cambiar idioma */
+
+
+
+
+
+
+
+
+/* Apartado de introducción */
 
 /* 
  * Contenedor principal que permite el desplazamiento vertical.
@@ -132,9 +226,23 @@
     75% { transform: rotate(-15deg); }
 }
 
-/* 
- * Estilos específicos para la sección "about".
- */
+
+/* Fin del apartado de introducción */
+
+
+
+
+
+
+
+
+
+
+
+
+/* Apartado Sobre Mi */
+
+
 #about p {
     font-size: 1.2rem;
     line-height: 1.6;
@@ -199,9 +307,20 @@
     75% { transform: translateY(-5px); }
 }
 
-/* 
- * Estilos para la sección "skills".
- */
+
+/* Fin del apartado Sobre Mi */
+
+
+
+
+
+
+
+
+
+/* Apartado de skills */
+
+
 #skills {
     padding: 50px 0;
 }
@@ -290,7 +409,24 @@
     100% { transform: rotate(360deg); }
 }
 
-/* Se necesitan más comentarios a parti de aquí*/
+
+/* Fin del apartado de skills */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Apartado de proyectos */
+
 
 #projects {
     padding: 50px 0;
@@ -430,6 +566,18 @@
     }
 }
 
+/* Fin del apartado de proyectos */
+
+
+
+
+
+
+
+
+
+/* Apartado de experiencia laboral */
+
 #experience {
     padding: 50px 0;
 }
@@ -486,6 +634,18 @@
     display: inline-block;
     animation: unfold 1.5s ease-in-out infinite;
 }
+
+
+/* Fin del apartado de experiencia laboral */
+
+
+
+
+
+
+/* Apartado de contacto */
+
+
 @keyframes unfold {
     0% {
     transform: scale(1);
@@ -501,74 +661,6 @@
     }
     100% {
     transform: scale(1); /* Vuelve a la posición original */
-    }
-}
-
-#testimonials {
-    padding: 50px 0;
-}
-#testimonials .content {
-    text-align: center;
-    margin: 0 auto;
-}
-#testimonials h1 {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
-    font-weight: bold;
-}
-#testimonials p {
-    font-size: 1.2rem;
-    margin-bottom: 40px;
-}
-.testimonials-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
-    padding: 0 20px;
-}
-.testimonial {
-    background-color: #ccc;
-    color: #000;
-    border-radius: 8px;
-    padding: 20px;
-    width: 500px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transition: transform 0.3s ease-in-out;
-}
-.testimonial:hover,
-.testimonial img:hover {
-    transform: scale(1.05);
-}
-.testimonial h3 {
-    font-size: 1.5rem;
-    margin-bottom: 15px;
-    font-weight: 600;
-    text-align: center;
-}
-#testimonials .emoji {
-    display: inline-block;
-    animation: speak 1s ease-in-out infinite;
-}
-
-@keyframes speak {
-    0% {
-    transform: rotate(0deg);
-    }
-    25% {
-    transform: rotate(5deg); /* Giro suave a la derecha */
-    }
-    50% {
-    transform: rotate(0deg); /* Vuelve a la posición original */
-    }
-    75% {
-    transform: rotate(-5deg); /* Giro suave a la izquierda */
-    }
-    100% {
-    transform: rotate(0deg); /* Vuelve a la posición original */
     }
 }
 
@@ -629,6 +721,17 @@
     }
 }
 
+
+/* Fin del apartado de contacto */
+
+
+
+
+
+
+
+/* Apartado de flecha azul de desplazamiento */
+
 .scroll-arrow {
     position: fixed;
     bottom: 20px;
@@ -646,61 +749,102 @@
     font-size: 3.5rem;
 }
 
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 50px;
-    height: 24px;
-    margin-left: 10px;
-    margin-right: 10px;
-}
+/* Fin de apartado de flecha azul de desplazamiento */
 
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
 
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    transition: .4s;
-    border-radius: 24px;
-}
 
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 16px;
-    width: 16px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    transition: .4s;
-    border-radius: 50%;
-}
 
-input:checked + .slider {
-    background-color: #2196F3;
-}
 
-input:checked + .slider:before {
-    transform: translateX(26px);
-}
 
-.lang-text {
-    color: white;
-    font-weight: bold;
-}
+
+
+
+
 
 
 /* Cosas necesarias.
 
 - Optimizar el codigo y eliminar las partes del codigo sobrantes
+
+*/
+
+
+
+
+
+
+/*
+Codigo inservible por ahora:
+
+Apartado testimonial:
+
+
+#testimonials {
+    padding: 50px 0;
+}
+#testimonials .content {
+    text-align: center;
+    margin: 0 auto;
+}
+#testimonials h1 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+#testimonials p {
+    font-size: 1.2rem;
+    margin-bottom: 40px;
+}
+.testimonials-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    padding: 0 20px;
+}
+.testimonial {
+    background-color: #ccc;
+    color: #000;
+    border-radius: 8px;
+    padding: 20px;
+    width: 500px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: transform 0.3s ease-in-out;
+}
+.testimonial:hover,
+.testimonial img:hover {
+    transform: scale(1.05);
+}
+.testimonial h3 {
+    font-size: 1.5rem;
+    margin-bottom: 15px;
+    font-weight: 600;
+    text-align: center;
+}
+#testimonials .emoji {
+    display: inline-block;
+    animation: speak 1s ease-in-out infinite;
+}
+
+@keyframes speak {
+    0% {
+    transform: rotate(0deg);
+    }
+    25% {
+    transform: rotate(5deg); /* Giro suave a la derecha 
+}
+50% {
+transform: rotate(0deg); /* Vuelve a la posición original 
+}
+75% {
+transform: rotate(-5deg); /* Giro suave a la izquierda 
+}
+100% {
+transform: rotate(0deg); /* Vuelve a la posición original
+}
+}
 
 */
